#
# Source Version: 3.0
# Software Release #: LLNL-CODE-422942
#

#include "cpyright.h"

package = ultra/applications

include $(top_srcdir)/Makefile.common

 
scheme_SCRIPTS = \
ultra.scm \
consts.scm \
func.scm \
annotate.scm \
compare.scm \
slib.scm \
trig.scm \
help.scm \
synon.scm \
toolbox.scm \
ultra.pui 

EXTRA_DIST = \
$(scheme_SCRIPTS)

